Fix font size/line and spacing

--- a/src/styles/elements/_typography.scss
+++ b/src/styles/elements/_typography.scss
@@ -1,83 +1,85 @@
-h1,
-.h1 {
+h1 {
   @include h1;
 }
 
-h2,
-.h2 {
+h2 {
   @include h2;
 }
 
-h3,
-.h3 {
+h3 {
   @include h3;
 }
 
-h4,
-.h4 {
+h4 {
   @include h4;
 }
 
-h5,
-.h5 {
+h5 {
   @include h5;
 }
 
-h6,
-.h6 {
+h6 {
   @include h6;
 }
 
-.fluid-1-xl-size {
-  font-size: var(--fluid-1-xl-size);
+.heading-s {
+  @extend %heading;
+  font-size: var(--heading-s);
 }
 
-.fluid-2-xl-size {
-  font-size: var(--fluid-2-xl-size);
+.heading-m {
+  @extend %heading;
+  font-size: var(--heading-m);
 }
 
-.fluid-3-xl-size {
-  font-size: var(--fluid-3-xl-size);
+.heading-l {
+  @extend %heading;
+  font-size: var(--heading-l);
 }
 
-.fluid-4-xl-size {
-  font-size: var(--fluid-4-xl-size);
+.heading-1-xl {
+  @extend %heading;
+  font-size: var(--heading-1-xl);
 }
 
-.fluid-5-xl-size {
-  font-size: var(--fluid-5-xl-size);
+.heading-2-xl {
+  @extend %heading;
+  font-size: var(--heading-2-xl);
 }
 
-.fluid-6-xl-size {
-  font-size: var(--fluid-6-xl-size);
+.heading-3-xl {
+  @extend %heading;
+  font-size: var(--heading-3-xl);
 }
 
-.fluid-7-xl-size {
-  font-size: var(--fluid-7-xl-size);
+.heading-4-xl {
+  @extend %heading;
+  font-size: var(--heading-4-xl);
 }
 
-.fluid-8-xl-size {
-  font-size: var(--fluid-8-xl-size);
+.heading-5-xl {
+  @extend %heading;
+  font-size: var(--heading-5-xl);
 }
 
-.fluid-9-xl-size {
-  font-size: var(--fluid-9-xl-size);
+.heading-6-xl {
+  @extend %heading;
+  font-size: var(--heading-6-xl);
 }
 
-.fluid-10-xl-size {
-  font-size: var(--fluid-10-xl-size);
+.heading-7-xl {
+  @extend %heading;
+  font-size: var(--heading-7-xl);
 }
 
-.fluid-11-xl-size {
-  font-size: var(--fluid-11-xl-size);
+.heading-8-xl {
+  @extend %heading;
+  font-size: var(--heading-8-xl);
 }
 
-.fluid-12-xl-size {
-  font-size: var(--fluid-12-xl-size);
-}
-
-.fluid-13-xl-size {
-  font-size: var(--fluid-13-xl-size);
+.heading-9-xl {
+  @extend %heading;
+  font-size: var(--heading-9-xl);
 }
 
 p {
@@ -95,16 +97,24 @@ p {
     @include quote-md;
   }
 
-  &.body-lg {
-    @include body-lg;
+  &.body-s {
+    @include body-s;
   }
 
-  &.body-md {
-    @include body-md;
+  &.body-m {
+    @include body-m;
   }
 
-  &.body-sm {
-    @include body-sm;
+  &.body-l {
+    @include body-l;
+  }
+
+  &.body-1-xl {
+    @include body-1-xl;
+  }
+
+  &.body-2-xl {
+    @include body-2-xl;
   }
 }
 
